footer fix label color contrast

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -5,6 +5,10 @@ footer {
     flex-direction: column;
     align-items: center;
 
+    .footer-label {
+        color: #9E9E9E;
+    }
+
     .footercontainer {
         width: 85%;
         display: flex;
